plang/testing/logs/false-incorrect/141/program141.p.p.out
Error at nZ bH :- (l (CmNX) Sdb UK).:2:8 error: 
nZ bH :- (l (CmNX) Sdb UK).
       ^
Error at nZ bH :- (l (CmNX) Sdb UK).:2:25 error: 
nZ bH :- (l (CmNX) Sdb UK).
                        ^
Error at g (kAV3x) (iCTtM (gauM (RU4x) Qr48) vQUM) :- (rCxk7 (ns (xo) (zyp8 (A4X) qaq9G F10Y (ytkAM (Ot) (OEx))))).:9:44 error: 
g (kAV3x) (iCTtM (gauM (RU4x) Qr48) vQUM) :- (rCxk7 (ns (xo) (zyp8 (A4X) qaq9G F10Y (ytkAM (Ot) (OEx))))).
                                           ^
Error at g (kAV3x) (iCTtM (gauM (RU4x) Qr48) vQUM) :- (rCxk7 (ns (xo) (zyp8 (A4X) qaq9G F10Y (ytkAM (Ot) (OEx))))).:9:104 error: 
g (kAV3x) (iCTtM (gauM (RU4x) Qr48) vQUM) :- (rCxk7 (ns (xo) (zyp8 (A4X) qaq9G F10Y (ytkAM (Ot) (OEx))))).
                                                                                                       ^
Error at ? (c (OgC7) (N) mIu5).:17:1 error: 
? (c (OgC7) (N) mIu5).
^