plang/testing/logs/false-incorrect/141/program141.p.p
s (KSPr) T URHWi.
nZ bH :- (l (CmNX) Sdb UK).


r X s (mV71 e (JnA) (CqAGi) (D)) (ab6 b sA5U (eZOg r) (l (i (vXu RG (I) (ToJ0))))).


vF0kw (n5a) xH (EP) (SPQiA).
g (kAV3x) (iCTtM (gauM (RU4x) Qr48) vQUM) :- (rCxk7 (ns (xo) (zyp8 (A4X) qaq9G F10Y (ytkAM (Ot) (OEx))))).

vF (VNkfG) (X) (QRw).


mUIbn (yv) sf.


? (c (OgC7) (N) mIu5).


